Add connectionFactory as an option to run the performance test

--- a/config/redis-transport-perftest.properties
+++ b/config/redis-transport-perftest.properties
@@ -1,8 +1,8 @@
 # Performance test properties for redis transport layer
 
 #redis inbound consumer config
-num.listener.threads=7
-is.brpop=true
+num.listener.threads=10
+is.brpop=false
 
 #syslog properties
 syslog.protocol=tcp
@@ -14,6 +14,8 @@ redis.queue.name=redis-transport-perf
 # Redis properties
 redis.hostname=localhost
 redis.port=6379
+
+redis.shareNativeConnection=true
 
 redis.pool.maxActive=8
 redis.pool.maxIdle=8
