--- a/config/redis-transport-perftest.properties
+++ b/config/redis-transport-perftest.properties
@@ -3,6 +3,7 @@
 #redis inbound consumer config
 num.listener.threads=10
 is.brpop=false
+listener.sleep.time=100
 
 #syslog properties
 syslog.protocol=tcp
