Improve performance with pipelined batching
Experiments as outlined in XD-539. Winning performer
is committed here: Inbound pipelined w/batch size 50.
Outbound pipelined w/batch size 500. Inbound uses
connection pool of size 100 for scenario when list size is less
than batch size.

Still some work to do on outbound batching to store
msgs when less than batch size.

--- a/config/redis-transport-perftest.properties
+++ b/config/redis-transport-perftest.properties
@@ -1,8 +1,8 @@
 # Performance test properties for redis transport layer
 
 #redis inbound consumer config
-num.listener.threads=15
-is.brpop=false
+num.listener.threads=1
+is.brpop=true
 listener.sleep.time=100
 
 #syslog properties
@@ -19,7 +19,7 @@ redis.port=6379
 redis.shareNativeConnection=true
 
 redis.pool.maxActive=100
-redis.pool.maxIdle=10
+redis.pool.maxIdle=100
 redis.pool.minIdle=0 
 redis.pool.maxWait=-1 
 redis.pool.whenExhaustedAction=1
